# floats

./: Cargo.toml  LICENSE  README.md
.github/workflows/: pr.yml  test.yml
benches/: cast.rs
src/: lib.rs
src/half/: mod.rs
src/half/aarch64/: fl32.rs  fl64.rs  int32.rs  int64.rs  mod.rs
src/half/sw/: fl32.rs  fl64.rs  int128.rs  int16.rs  int32.rs  int64.rs  int8.rs  mod.rs
src/half/x86_64/: mod.rs
src/half/x86_64/avx/: fl32.rs  fl64.rs  int32.rs  int64.rs  mod.rs
src/half/x86_64/f16c/: fl32.rs  mod.rs
src/quad/: mod.rs
src/quad/sw/: fl16.rs  fl32.rs  fl64.rs  int128.rs  int16.rs  int32.rs  int64.rs  int8.rs  mod.rs
tests/: cast.rs  eq.rs  platform.rs
tests/common/: bitable.rs  custom.rs  mod.rs
